[package]
name = "poetry-udeps"
version = "0.2.3"
edition = "2021"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Find unused dependencies in pyproject.toml"
repository = "https://github.com/lukehsiao/poetry-udeps"
homepage = "https://github.com/lukehsiao/poetry-udeps"
license = "BlueOak-1.0.0"
keywords = ["poetry", "dependencies"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["wrap_help", "derive", "suggestions"] }
clap-verbosity-flag = "2.2.1"
flume = "0.11.0"
ignore = "0.4.22"
log = "0.4.22"
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
xshell = "0.2.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
